# openbci-4

./: README.md  main.py  pyproject.toml
mermaid/: 1.md  2.md
notebooks/: unit_01_foundations.ipynb  unit_02_boardshim.ipynb  unit_02_connection.ipynb  unit_03_signal_processing.ipynb  unit_04_eeg_analysis.ipynb  unit_05_bci_applications.ipynb  unit_06_advanced_topics.ipynb
notebooks/utils/: __init__.py  helpers.py
notes/: review.md  unit_01_cmrr.ipynb  unit_01_enob.ipynb  unit_01_gain.ipynb  unit_01_irn.ipynb  unit_01_lsb.ipynb  unit_01_num2.ipynb  unit_02_dongle.ipynb  unit_02_num.ipynb  unit_03_iir.ipynb  unit_05_bys.ipynb
utils/: helpers.py
