[project]
name = "openbci-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "brainflow>=5.21.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "mne>=1.12.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyserial>=3.5",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "notebook>=7.5.6",
]
